# backend-projects

django-projects/Blog/: docker-compose.yaml  pyproject.toml
django-projects/Blog/core/: settings.py
django-projects/Ecommerce/: docker-compose.yaml
django-projects/Ecommerce/core/: settings.py
fastapi-projects/Faq-Chatbot/: README.md  pyproject.toml
fastapi-projects/Faq-Chatbot/app/: faq_service.py  main.py  models.py
fastapi-projects/Faq-Chatbot/app/templates/: base.html  index.html
fastapi-projects/Faq-Chatbot/tests/: test_main.py
flask-projects/Flask-Nft/: README.md  app.py  config.py  pyproject.toml
flask-projects/Flask-Nft/resources/: nft_resource.py
flask-projects/Flask-Nft/services/: image_service.py
flask-projects/Flask-Nft/templates/: index.html
flask-projects/Flask-Nft/uploads/: usagi_metadata.json
flask-projects/Medical-Consultation/: README.md  pyproject.toml
flask-projects/Medical-Consultation/src/: app.py  config.py  models.py
flask-projects/Medical-Consultation/src/routes/: health.py
flask-projects/Medical-Consultation/src/services/: diagnosis.py
flask-projects/Medical-Consultation/src/templates/: base.html  result.html  submit.html
flask-projects/Medical-Consultation/src/utils/: database.py
flask-projects/Medical-Consultation/tests/: test_app.py  test_diagnosis.py
flask-projects/Music-Recommendation/: README.md  pyproject.toml
flask-projects/Music-Recommendation/app/: app.py
flask-projects/Music-Recommendation/app/resources/: music.py
flask-projects/Music-Recommendation/static/: styles.css
flask-projects/Music-Recommendation/templates/: base.html  index.html  recommend.html
flask-projects/Stock-Prediction/: README.md  pyproject.toml  run.py
flask-projects/Stock-Prediction/stock_prediction/: __init__.py  main.py
flask-projects/Stock-Prediction/stock_prediction/templates/: base.html  index.html
