[tool.poetry]
name = "faq-chatbot"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.115.6"
transformers = "^4.48.0"
pydantic = "^2.10.5"
pytest = "^8.3.4"
uvicorn = "^0.34.0"
jinja2 = "^3.1.5"
wikipedia-api = "^0.7.3"
httpx = "^0.28.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
