[tool.poetry]
name = "medical-consultation"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-restful = "^0.3.10"
flask-jwt-extended = "^4.7.1"
sqlalchemy = "^2.0.37"
scikit-learn = "^1.6.1"
pylint = "^3.3.3"
black = "^24.10.0"
isort = "^5.13.2"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
