[tool.poetry]
name = "stock-prediction"
version = "0.1.0"
description = ""
authors = ["zoelinsg <zoelin.sg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.1.0"
flask-restful = "^0.3.10"
yfinance = "^0.2.51"
scikit-learn = "^1.6.1"
pandas = "^2.2.3"
matplotlib = "^3.10.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
